--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../src/images/loge.svg"/>
+    <meta
+        name="description"
+        content="創造專屬任意門，簡單、快速、分享，一鍵前往您的所有網站~"
+    />
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://dokodemo-door.web.app/" />
     <title>Dokodemo Door</title>
+
+    <!-- Open Graph -->
+    <meta property="og:url" content="https://dokodemo-door.web.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dokodemo Door" />
+    <meta property="og:description" content="創造專屬任意門，簡單、快速、分享，一鍵前往您的所有網站~" />
+    <meta property="og:image" content="https://dokodemo-door.web.app/src/images/loge.svg" />
 </head>
 <body>
     <div id="root"></div>
